--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,200 +14,20 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="15dp"
-                            app:cardCornerRadius="@dimen/cardCornerRadius"
-                            app:cardElevation="4dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="@dimen/imageViewHomeHigh"
-                                    android:src="@drawable/alvaro_chanel_1" />
-
-                                <View
-                                    android:layout_width="match_parent"
-                                    android:layout_height="1dp"
-                                    android:background="@color/colorPrimary" />
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginLeft="@dimen/marginHomeSubtitle"
-                                    android:layout_marginTop="@dimen/marginHomeSubtitle"
-                                    android:layout_marginRight="@dimen/marginHomeSubtitle"
-                                    android:text="@string/inicio_frag_tv_que_es"
-                                    android:textColor="@color/colorPrimaryDark"
-                                    android:textSize="@dimen/titleSize"
-                                    android:textStyle="bold" />
-
-                                <View
-                                    android:layout_width="match_parent"
-                                    android:layout_height="1dp"
-                                    android:layout_marginTop="10dp"
-                                    android:background="@color/colorPrimary" />
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginLeft="@dimen/marginHomeSubtitle"
-                                    android:layout_marginTop="@dimen/marginHomeSubtitle"
-                                    android:layout_marginRight="@dimen/marginHomeSubtitle"
-                                    android:text="@string/inicio_frag_tv_que_es_resp"
-                                    android:textColor="@color/colorPrimary"
-                                    android:textSize="@dimen/subtitleSize" />
-
-                            </LinearLayout>
-
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="15dp"
-                        app:cardCornerRadius="@dimen/cardCornerRadius"
-                        app:cardElevation="4dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/imageViewHomeHigh"
-                                android:src="@drawable/alvaro_chanel_2" />
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:background="@color/colorPrimary" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/marginHomeSubtitle"
-                                android:layout_marginTop="@dimen/marginHomeSubtitle"
-                                android:layout_marginRight="@dimen/marginHomeSubtitle"
-                                android:text="@string/inicio_frag_tv_que_es"
-                                android:textColor="@color/colorPrimaryDark"
-                                android:textSize="@dimen/titleSize"
-                                android:textStyle="bold" />
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:layout_marginTop="10dp"
-                                android:background="@color/colorPrimary" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/marginHomeSubtitle"
-                                android:layout_marginTop="@dimen/marginHomeSubtitle"
-                                android:layout_marginRight="@dimen/marginHomeSubtitle"
-                                android:text="@string/inicio_frag_tv_que_es_resp"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="@dimen/subtitleSize" />
-
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
-                    app:cardCornerRadius="@dimen/cardCornerRadius"
-                    app:cardElevation="4dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/imageViewHomeHigh"
-                            android:src="@drawable/alvaro_chanel_3" />
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:background="@color/colorPrimary" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/marginHomeSubtitle"
-                            android:layout_marginTop="@dimen/marginHomeSubtitle"
-                            android:layout_marginRight="@dimen/marginHomeSubtitle"
-                            android:text="@string/inicio_frag_tv_que_es"
-                            android:textColor="@color/colorPrimaryDark"
-                            android:textSize="@dimen/titleSize"
-                            android:textStyle="bold" />
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@color/colorPrimary" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/marginHomeSubtitle"
-                            android:layout_marginTop="@dimen/marginHomeSubtitle"
-                            android:layout_marginRight="@dimen/marginHomeSubtitle"
-                            android:text="@string/inicio_frag_tv_que_es_resp"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="@dimen/subtitleSize" />
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="@dimen/cardCornerRadius"
                 app:cardElevation="4dp"
                 android:layout_margin="15dp">
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
-
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/imageViewHomeHigh"
-                        android:src="@drawable/alvaro_chanel_4" />
-
+                        android:src="@drawable/alvaro_chanel_1" />
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -222,13 +42,11 @@
                         android:layout_marginRight="@dimen/marginHomeSubtitle"
                         android:layout_marginLeft="@dimen/marginHomeSubtitle"
                         android:layout_marginTop="@dimen/marginHomeSubtitle"/>
-
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="@color/colorPrimary"
                         android:layout_marginTop="10dp"/>
-
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -238,10 +56,148 @@
                         android:layout_marginRight="@dimen/marginHomeSubtitle"
                         android:layout_marginLeft="@dimen/marginHomeSubtitle"
                         android:layout_marginTop="@dimen/marginHomeSubtitle"/>
-
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="@dimen/cardCornerRadius"
+                app:cardElevation="4dp"
+                android:layout_margin="15dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/imageViewHomeHigh"
+                        android:src="@drawable/alvaro_chanel_2" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorPrimary"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/inicio_frag_tv_por_que"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/titleSize"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:layout_marginRight="@dimen/marginHomeSubtitle"
+                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorPrimary"
+                        android:layout_marginTop="10dp"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/inicio_frag_tv_por_que_resp"
+                        android:textSize="@dimen/subtitleSize"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_marginRight="@dimen/marginHomeSubtitle"
+                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="@dimen/cardCornerRadius"
+                app:cardElevation="4dp"
+                android:layout_margin="15dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/imageViewHomeHigh"
+                        android:src="@drawable/alvaro_chanel_3" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorPrimary"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/inicio_frag_tv_info"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/titleSize"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:layout_marginRight="@dimen/marginHomeSubtitle"
+                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorPrimary"
+                        android:layout_marginTop="10dp"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/inicio_frag_tv_info_resp"
+                        android:textSize="@dimen/subtitleSize"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_marginRight="@dimen/marginHomeSubtitle"
+                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="@dimen/cardCornerRadius"
+                app:cardElevation="4dp"
+                android:layout_margin="15dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/imageViewHomeHigh"
+                        android:src="@drawable/alvaro_chanel_4" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorPrimary"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/inicio_frag_tv_info"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/titleSize"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:layout_marginRight="@dimen/marginHomeSubtitle"
+                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorPrimary"
+                        android:layout_marginTop="10dp"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/inicio_frag_tv_info_resp"
+                        android:textSize="@dimen/subtitleSize"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_marginRight="@dimen/marginHomeSubtitle"
+                        android:layout_marginLeft="@dimen/marginHomeSubtitle"
+                        android:layout_marginTop="@dimen/marginHomeSubtitle"/>
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
         </LinearLayout>
     </ScrollView>
 
