--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/shape_paragraph">
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/imageViewHomeHigh"
@@ -69,7 +70,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/shape_paragraph">
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/imageViewHomeHigh"
@@ -115,7 +117,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/shape_paragraph">
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/imageViewHomeHigh"
@@ -161,7 +164,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@drawable/shape_paragraph">
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/imageViewHomeHigh"
